# open-rmm

./: .env  .gitignore  Cargo.toml  README.md  package.json  pnpm-lock.yaml  turbo.json
.github/workflows/: ci-agent.yml  ci-unit-agent.yml  ci-unit-www.yml  ci-www.yml
agent/: .gitignore  Cargo.toml  config.json
agent/src/: client.rs  config.rs  main.rs  utils.rs
agent/src/client/: device_uuid.rs  os_version_name.rs  system_info.rs  utils.rs
agent/src/client/system_info/: detect_system_type.rs  pending_reboot.rs
apps/agent/: .gitignore  Cargo.toml  config.json  package.json  uuid.example
apps/agent/src/: client.rs  device_uuid.rs  main.rs
apps/agent/src/client/: detect_system_type.rs  device_uuid.rs  os_version_name.rs  pending_reboot.rs  utils.rs
apps/agent/src/scripts/bash/: pending_reboot.sh
apps/agent/src/scripts/pwsh/: pending_reboot.ps1
apps/clients/windows/: volumeInformation.ps1
apps/server/: jest.config.js  package.json  tsconfig.json
apps/server/src/: index.ts  routes.ts
apps/server/src/middleware/: checkAuthUUID.ts  validateResource.ts
apps/server/src/routes/: computer.ts  systemInfo.ts
apps/server/src/schema/: systemInfo.schema.ts
apps/www/: package.json  vite.config.ts
apps/www/src/: error.html
apps/www/tests/: Open_RMM.postman_collection.json
cli/: .gitignore  Cargo.toml
cli/src/: cli.rs  client.rs  config.rs  error.rs  log.rs  main.rs  shutdown.rs  worker.rs
cli/src/client/: device_uuid.rs  mod.rs  system_info.rs
cli/src/client/system_info/: os_version_name.rs
cli/src/client/system_info/scripts/pwsh/: detect_vm.ps1  pending_reboot.ps1
cli/src/installer/: mod.rs
cli/src/utils/: mod.rs  paths.rs  uuid.rs
cli/src/worker/: mod.rs  supervisor.rs  task.rs
cli/src/worker/workers/: commands.rs  heartbeat.rs  ipc.rs  mod.rs  reporting.rs
client/linux/src/: main.rs
client/windows/: App.xaml  MainWindow.xaml  Open-RMM Client.csproj  Open-RMM Client.slnx  app.manifest
client/windows/Properties/: launchSettings.json
clients/windows/: agent.ps1
db/: .gitignore  Cargo.toml  modulize.mjs
db/src/: lib.rs
docker/: .gitignore
docker/dev/: docker-compose.yml
docs/: todo.md
gui/linux/: Cargo.toml  deps.md
gui/linux/src/: app.rs  main.rs
gui/windows/: App.xaml.cs  MainWindow.xaml.cs  Package.appxmanifest
old/api/realData/: av.json  drives.json  systemInfo.json  winUpdates.json
old/api/src/: index.ts
old/api/src/controller/: computer.controller.ts  systemInfo.controller.ts  update.controller.ts
old/api/src/middleware/: checkAuthUUID.ts
old/api/src/models/: systemInfo.model.ts  update.model.ts  volume.model.ts
old/api/src/schema/: computer.schema.ts  update.schema.ts
old/api/src/service/: antivirus.service.ts  update.service.ts  volume.service.ts
old/api/tests/: Open_RMM.postman_collection.json
old/clients/windows/: CheckWindowsUpdates.ps1
old/common/types/: computer.d.ts
old/server/: tsconfig.json
old/server-rs/: .gitignore  Cargo.toml
old/server-rs/src/: main.rs
old/server-rs/src/db/: mod.rs
old/server-rs/src/middleware/: check_auth_uuid.rs
old/server-rs/src/routes/: computer.rs  healthcheck.rs  mod.rs
old/server-ts/__tests__/: app.tests.ts
old/server-ts/src/schema/: computer.schema.ts
old/www/src/components/: nav.svelte
old/www/src/routes/: __layout.svelte  index.svelte
prisma/: .gitignore  package.json  schema.prisma  tsconfig.json
server/: .env  Cargo.toml  index.ts  package-lock.json  package.json  tailwind.config.cjs
server/api/: .env.example  .gitignore  package.json
server/api/interfaces/: Iav.ts  Idrive.ts  IsystemInfo.ts  Ivolume.ts  IvolumeName.ts
server/api/models/: av.model.ts  systemInfo.model.ts  volumes.model.ts
server/api/realData/: winUpdates.json
server/api/routes/: av.route.ts  systemInfo.route.ts  volumes.route.ts  volumesNames.route.ts
server/api/src/: index.ts  routes.ts
server/api/src/controller/: antivirus.controller.ts  computer.controller.ts  systemInfo.controller.ts  volume.controller.ts
server/api/src/db/: connect.ts
server/api/src/middleware/: checkAuthUUID.ts
server/api/src/models/: antivirus.model.ts  computer.model.ts  systemInfo.model.ts  update.model.ts  (+1 more)
server/api/tests/: Open_RMM.postman_collection.json
server/common/: .eslintrc  .gitignore  .prettierrc  package.json  tsconfig.json
server/prisma/: schema.prisma
server/src/: app.css  hooks.server.ts  main.rs  routes.ts
server/src/db/: mod.rs  system_info.rs
server/src/middleware/: check_auth_uuid.rs  mod.rs  validateResource.ts
server/src/routes/: +page.svelte  error.rs  healthcheck.rs  mod.rs  system_info.rs
server/src/schema/: antivirus.schema.ts  volume.schema.ts
server/src/utils/: logger.ts
server/www/: .gitignore  package-lock.json  package.json  rollup.config.js  svelte.config.js
server/www/public/: global.css
server/www/src/: App.svelte  app.css  app.html  styles.postcss
supabase/: .gitignore  config.toml  how-to.md  notes.md  package.json  seed.sql
supabase/functions/_shared/: database.types.ts
supabase/functions/register-computer/: index.ts
supabase/migrations/: 20240405184616_remote_schema.sql  20240417125955_add_tenants_org_units_and_more.sql  20240725212330_add_rls_for_profiles_and_org_units.sql  20240729161435_RLS to add own Org Unit.sql  20240729200749_add_rls_to_computers.sql  20240805214334_mostly-rls-for-system_info.sql  20250714190818_new-rls.sql  20250716113940_update-orgunit.sql  20250716120525_update-orgunit-default-values.sql  20250716203011_add_constraints_to_org_name.sql  20250721225526_fix-computer-insert-RLS.sql
www/: .env.example  .gitignore  .prettierignore  package.json  playwright.config.ts  pnpm-lock.yaml  pnpm-workspace.yaml  svelte.config.js  tailwind.config.cjs  tailwind.config.js  vite.config.ts
www/e2e/: authFlow.test.ts  index.test.ts
www/prisma/: schema.prisma
www/src/: app.css  app.d.ts  hooks.server.ts
www/src/lib/: config.ts  database.types.ts  iconsList.ts  supabase.ts
www/src/routes/: +layout.server.ts  +layout.svelte  +layout.ts  +page.svelte  +page.ts
www/tests/: authFlow.test.ts
(+176 files in other folders)
