[package]
name = "agent"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
reqwest = { version = "0.12", default-features = false, features = [
    "json",
    "rustls-tls",
] }
tokio = { version = "1.41", features = ["full"] }
serde_json = "1.0"
async-fs = "2.1"
sysinfo = "0.32"
chrono = "0.4"
postgrest = "1.6"

[target.'cfg(windows)'.dependencies]
powershell_script = "1.1"

[target.'cfg(unix)'.dependencies]
run_script = "0.11"

[dependencies.uuid]
version = "1.11"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]
