[package]
name = "cli"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
uuid = { version = "1.23.1", features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
] }
reqwest = { version = "0.13", default-features = false, features = [
    "json",
    "rustls",
    "http2",
] }
tokio = { version = "1.52", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
async-fs = "2.2"
sysinfo = "0.39"
chrono = "0.4"
postgrest = "1.6"
anyhow = "1.0"
clap = { version = "4.6", features = ["derive"] }


[target.'cfg(windows)'.dependencies]
powershell_script = "1.1"
windows = "0.62"

[target.'cfg(unix)'.dependencies]
run_script = "0.11"
nix = { version = "0.31", features = ["user"] }
