[package]
name = "db"
version = "0.1.0"
edition = "2021"

# needed for target wasm type
[lib]
crate-type = ["cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# deps
[dependencies]
wasm-bindgen = "0.2"
tokio = { version = "1", features = ["full"] }
sqlx = { version = "^0.7", features = [
    "postgres",
    "runtime-tokio",
    "macros",
    "chrono",
    "uuid",
] }
uuid = "1.4"
chrono = "0.4"
wasm-bindgen-futures = "0.4.37"
lazy_static = "1.4.0"
