[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
axum = { version = "0.7", features = ["json"] }
tokio = { version = "1", features = ["full"] }
sqlx = { version = "^0.7", features = [
    "postgres",
    "runtime-tokio",
    "macros",
    "chrono",
    "uuid",
] }
uuid = { version = "1.4", features = ["serde"] }
chrono = { version = "0.4", features = ["serde"] }
dotenv = "0.15"
tower-http = { version = "0.5", features = ["trace"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing = "0.1"
thiserror = "1.0"
anyhow = "1.0"
